--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <script>
         let box = document.querySelector('.box')
-        const color = ['#F8BBD0', '#FF4081', '#FF80AB', '#D500F9', '#FFB3C1', '#F06292']
+        const color = ['#9B59B6', '#8E44AD', '#D5B0FF', '#3498DB', '#F39C12', '#F5A623'];
         const directions = ['front', 'back', 'left', 'right', 'top', 'bottom']
         
         for (var i of directions){
@@ -23,7 +23,48 @@
             let direction = document.createElement('div')
             box.appendChild(direction)
             direction.classList.add(i);
-            direction.setAttribute('style', '--clr:${color[directions.indexOf(i)]}')
+            direction.setAttribute('style', `--clr:${color[directions.indexOf(i)]}`)
+
+            for (let j = 0; j <3; j++){
+                let span = document.createElement('span')
+
+                direction.appendChild(span)
+
+                let name = "TECHUSTAAD"
+
+                if (i==='bottom'){
+                    let nameChars = name.split('')
+                    span.innerHTML = nameChars[j]
+                    span.classList.add("nameLetters")
+                }
+            }
+            direction.querySelector('span').setAttribute('style', `--clr:${color[directions.indexOf(i)]}`)
+
+        }
+        let isKeyDown = false;
+
+        document.documentElement.addEventListener('mousedown', function(e) {
+        switch (isKeyDown) {
+            case false:
+                isKeyDown = true;
+                break;
+            case true:
+                isKeyDown = false;
+            }
+        });
+
+document.documentElement.addEventListener('mousemove', function(e) {
+    if (isKeyDown) {
+        rotateCube(e.clientX, e.clientY);
+    }
+});
+
+        function rotateCube(x,y){
+            console.log(x,y)
+
+            let xValue = Math.floor((x/2) + 100)
+            let yValue = Math.floor((y/2) + 100)
+            box.style.transform = `rotateX(${yValue}deg) rotateY(${xValue}deg)`
         }
     </script>
 </body>
