made cube even prettier

--- a/index.html
+++ b/index.html
@@ -11,13 +11,42 @@
 ><body>
     <div class="container">
         <div class="box">
-            <div class="top"></div>
-            <div class="bottom"></div>
-            <div class="left"></div>
-            <div class="right"></div>
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
+            <div class="top">
+                <!-- 9 spans for the 3x3 grid effect on the top face -->
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+            </div>
+            <div class="bottom">
+                <!-- 9 spans for the bottom face -->
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+            </div>
+            <div class="left">
+                <!-- 9 spans for the left face -->
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+            </div>
+            <div class="right">
+                <!-- 9 spans for the right face -->
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+            </div>
+            <div class="front">
+                <!-- 9 spans for the front face -->
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+            </div>
+            <div class="back">
+                <!-- 9 spans for the back face -->
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+                <span></span><span></span><span></span>
+            </div>
     </div>
 
     <script>
