--- a/index.html
+++ b/index.html
@@ -12,83 +12,7 @@
 <body>
     <div class="container">
         <div class="rubiks-cube">
-            <!-- Front face -->
-            <div class="face front">
-                <div class="mini-cube corner" id="front-top-left"></div>
-                <div class="mini-cube border" id="front-top-center"></div>
-                <div class="mini-cube corner" id="front-top-right"></div>
-                <div class="mini-cube border" id="front-center-left"></div>
-                <div class="mini-cube center" id="front-center"></div>
-                <div class="mini-cube border" id="front-center-right"></div>
-                <div class="mini-cube corner" id="front-bottom-left"></div>
-                <div class="mini-cube border" id="front-bottom-center"></div>
-                <div class="mini-cube corner" id="front-bottom-right"></div>
-            </div>
-
-            <!-- Back face -->
-            <div class="face back">
-                <div class="mini-cube corner" id="back-top-left"></div>
-                <div class="mini-cube border" id="back-top-center"></div>
-                <div class="mini-cube corner" id="back-top-right"></div>
-                <div class="mini-cube border" id="back-center-left"></div>
-                <div class="mini-cube center" id="back-center"></div>
-                <div class="mini-cube border" id="back-center-right"></div>
-                <div class="mini-cube corner" id="back-bottom-left"></div>
-                <div class="mini-cube border" id="back-bottom-center"></div>
-                <div class="mini-cube corner" id="back-bottom-right"></div>
-            </div>
-
-            <!-- Left face -->
-            <div class="face left">
-                <div class="mini-cube corner" id="left-top-left"></div>
-                <div class="mini-cube border" id="left-top-center"></div>
-                <div class="mini-cube corner" id="left-top-right"></div>
-                <div class="mini-cube border" id="left-center-left"></div>
-                <div class="mini-cube center" id="left-center"></div>
-                <div class="mini-cube border" id="left-center-right"></div>
-                <div class="mini-cube corner" id="left-bottom-left"></div>
-                <div class="mini-cube border" id="left-bottom-center"></div>
-                <div class="mini-cube corner" id="left-bottom-right"></div>
-            </div>
-
-            <!-- Right face -->
-            <div class="face right">
-                <div class="mini-cube corner" id="right-top-left"></div>
-                <div class="mini-cube border" id="right-top-center"></div>
-                <div class="mini-cube corner" id="right-top-right"></div>
-                <div class="mini-cube border" id="right-center-left"></div>
-                <div class="mini-cube center" id="right-center"></div>
-                <div class="mini-cube border" id="right-center-right"></div>
-                <div class="mini-cube corner" id="right-bottom-left"></div>
-                <div class="mini-cube border" id="right-bottom-center"></div>
-                <div class="mini-cube corner" id="right-bottom-right"></div>
-            </div>
-
-            <!-- Top face -->
-            <div class="face top">
-                <div class="mini-cube corner" id="top-top-left"></div>
-                <div class="mini-cube border" id="top-top-center"></div>
-                <div class="mini-cube corner" id="top-top-right"></div>
-                <div class="mini-cube border" id="top-center-left"></div>
-                <div class="mini-cube center" id="top-center"></div>
-                <div class="mini-cube border" id="top-center-right"></div>
-                <div class="mini-cube corner" id="top-bottom-left"></div>
-                <div class="mini-cube border" id="top-bottom-center"></div>
-                <div class="mini-cube corner" id="top-bottom-right"></div>
-            </div>
-
-            <!-- Bottom face -->
-            <div class="face bottom">
-                <div class="mini-cube corner" id="bottom-top-left"></div>
-                <div class="mini-cube border" id="bottom-top-center"></div>
-                <div class="mini-cube corner" id="bottom-top-right"></div>
-                <div class="mini-cube border" id="bottom-center-left"></div>
-                <div class="mini-cube center" id="bottom-center"></div>
-                <div class="mini-cube border" id="bottom-center-right"></div>
-                <div class="mini-cube corner" id="bottom-bottom-left"></div>
-                <div class="mini-cube border" id="bottom-bottom-center"></div>
-                <div class="mini-cube corner" id="bottom-bottom-right"></div>
-            </div>
+            <script src="createCube.js"></script>
         </div>
     </div>
 
@@ -100,7 +24,7 @@
     </div>
 
     <!-- External JavaScript -->
-    <script src="setColors.js"></script>
+    <!-- <script src="setColors.js"></script> -->
     <script src="functions.js"></script>
 </body>
 
