removed useless code and changed mini-cube colors

--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
 
 <body>
     <div class="container">
-        <div class="rubiks-cube">
-            <script src="createCube.js"></script>
-        </div>
+        <div class="rubiks-cube"> </div>
     </div>
-
+    
     <!-- Buttons -->
     <div class="button-container">
         <button class="pixel-button">SHUFFLE ME</button>
         <button class="pixel-button">SOLVE ME</button>
         <button class="pixel-button">AMUSE ME</button>
     </div>
-
+    
     <!-- External JavaScript -->
-    <!-- <script src="setColors.js"></script> -->
+    <script src="createCube.js"></script>
     <script src="functions.js"></script>
 </body>
 
