tidying up and adding cube sensitivity to mouse drag

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     
     <!-- External JavaScript -->
     <script src="createCube.js"></script>
+    <script src="mouseHandle.js"></script>
     <script src="functions.js"></script>
 </body>
 
