started refactoring how to handle minicube rotations with some v ugly code

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="createCube.js"></script>
     <script src="mouseHandle.js"></script>
     <script src="functions.js"></script>
+    <script src="handleMiniCubeRotation.js"></script>
 </body>
 
 </html>
