--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>3D Rubik's Cube</title>
 </head>
 
@@ -22,10 +22,10 @@
     </div>
     
     <!-- External JavaScript -->
-    <script src="createCube.js"></script>
-    <script src="mouseHandle.js"></script>
-    <script src="functions.js"></script>
-    <script src="handleMiniCubeRotation.js"></script>
+    <script src="src/createCube.js"></script>
+    <script src="src/functions.js"></script>
+    <script src="src/handleMiniCubeRotation.js"></script>
+    <script src="src/mouseHandle.js"></script>
 </body>
 
 </html>
