added shuffle function to shuffle button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="src/functions.js"></script>
     <script src="src/handleMiniCubeRotation.js"></script>
     <script src="src/mouseHandle.js"></script>
+    <script src="src/randomSuffle.js"></script>
 </body>
 
 </html>
