completed pre-dispositions of buttons to do things

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     
     <!-- Buttons -->
     <div class="button-container">
-        <button class="pixel-button">SHUFFLE ME</button>
-        <button class="pixel-button">SOLVE ME</button>
-        <button class="pixel-button">AMUSE ME</button>
+        <button class="pixel-button" onclick="console.log('will solve in 20 moves')">SOLVE ME</button>
+        <button class="pixel-button" onclick=randomShuffle()>SHUFFLE ME</button>
+        <button class="pixel-button" onclick=learnToSlay()>AMUSE ME</button>
     </div>
     
     <!-- External JavaScript -->
@@ -26,7 +26,7 @@
     <script src="src/functions.js"></script>
     <script src="src/handleMiniCubeRotation.js"></script>
     <script src="src/mouseHandle.js"></script>
-    <script src="src/randomSuffle.js"></script>
+    <script src="src/buttons.js"></script>
 </body>
 
 </html>
