refactored clockwise rotation function

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <!-- External JavaScript -->
     <script src="src/createCube.js"></script>
     <script src="src/functions.js"></script>
+    <script src="src/rotations.js"></script>
     <script src="src/handleMiniCubeRotation.js"></script>
     <script src="src/mouseHandle.js"></script>
-    <script src="src/buttons.js"></script>
+    <!-- <script src="src/buttons.js"></script> -->
 </body>
 
 </html>
