--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- External JavaScript -->
     <script src="src/createCube.js"></script>
     <script src="src/functions.js"></script>
-    <script src="src/rotations.js"></script>
+    <script src="src/rotateClockwise.js"></script>
     <script src="src/handleMiniCubeRotation.js"></script>
     <script src="src/mouseHandle.js"></script>
     <!-- <script src="src/buttons.js"></script> -->
