--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="src/createCube.js"></script>
     <script src="src/functions.js"></script>
     <script src="src/rotateClockwise.js"></script>
+    <script src="src/rotateAntiClockwise.js"></script>
     <script src="src/handleMiniCubeRotation.js"></script>
     <script src="src/mouseHandle.js"></script>
     <!-- <script src="src/buttons.js"></script> -->
