refactoring calculateRotation() in order for it to be scalable to any given cube size without hardcoding coordinates

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <!-- External JavaScript -->
     <script src="src/createCube.js"></script>
     <script src="src/functions.js"></script>
-    <script src="src/rotateClockwise.js"></script>
-    <script src="src/rotateAntiClockwise.js"></script>
+    <script src="src/rotateFace.js"></script>
     <script src="src/handleMiniCubeRotation.js"></script>
     <script src="src/mouseHandle.js"></script>
     <!-- <script src="src/buttons.js"></script> -->
