feat: added lil enjoy() function to add to the LETS GO button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="button-container">
         <button class="pixel-button" onclick="console.log('will solve in 20 moves')">SOLVE ME</button>
         <button class="pixel-button" onclick=randomShuffle()>SHUFFLE ME</button>
-        <button class="pixel-button" onclick=learnToSlay()>AMUSE ME</button>
+        <button class="pixel-button" onclick=enjoy()>AMUSE ME</button>
     </div>
     
     <!-- External JavaScript -->
