feat: added lil enjoy() function to add to the LETS GO button

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     
     <!-- Buttons -->
     <div class="button-container">
-        <button class="pixel-button" onclick="console.log('will solve in 20 moves')">SOLVE ME</button>
+        <button class="pixel-button" onclick=solve()>SOLVE ME</button>
         <button class="pixel-button" onclick=randomShuffle()>SHUFFLE ME</button>
-        <button class="pixel-button" onclick=enjoy()>AMUSE ME</button>
+        <button class="pixel-button" onclick=enjoy()>LETS GO</button>
     </div>
     
     <!-- External JavaScript -->
