feat: added lil enjoy() function to add to the LETS GO button for real

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     
     <!-- Buttons -->
     <div class="button-container">
-        <button class="pixel-button" onclick=solve()>SOLVE ME</button>
+        <button class="pixel-button" onclick=solve() >SOLVE ME</button>
         <button class="pixel-button" onclick=randomShuffle()>SHUFFLE ME</button>
-        <button class="pixel-button" onclick=enjoy()>LETS GO</button>
+        <button class="pixel-button" onclick="enjoy()">LETS GO</button>
     </div>
     
     <!-- External JavaScript -->
@@ -27,7 +27,7 @@
     <script src="src/rotateFace.js"></script>
     <script src="src/handleMiniCubeRotation.js"></script>
     <script src="src/mouseHandle.js"></script>
-    <!-- <script src="src/buttons.js"></script> -->
+    <script src="src/buttons.js"></script>
 </body>
 
 </html>
